action to show/hide button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Power Button Broken</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Power Button Saver and Fix</string>
+    <string name="description">With this App you can:\n
+        - fix and preserve your Power Button.\n
+        - you need to use the button only to power on your device.</string>
     <string name="action_settings">Settings</string>
 
 </resources>
