proximity sensor active at boot time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Power Button Saver and Fix</string>
     <string name="description">With this App you can:\n
         - fix and preserve your Power Button.\n
-        - you need to use the button only to power on your device.</string>
+        - use the button only to power on your device.</string>
     <string name="action_settings">Settings</string>
 
 </resources>
